[package]
name = "pirate-sea-jam"
version = "0.10.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.13.2"
bevy_editor_pls = "0.8.1"
bevy_ggrs = { version = "0.15.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.9.0", features = ["ggrs"] }
clap = { version = "4.5.4", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimize for WASM builds for size (see https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html)
[profile.release]
opt-level = 's'
lto = "thin"
